Fixed title wrapping

--- a/Harbor.UI/Content/site/core/page.css
+++ b/Harbor.UI/Content/site/core/page.css
@@ -7,7 +7,6 @@
   height: 7em;
   line-height: 7em; }
   .page-header h1 {
-    float: left;
     margin: 0 0.5em;
     font-size: 2em;
     font-weight: normal; }
