--- a/Harbor.UI/Content/site/core/src/_page-header.scss
+++ b/Harbor.UI/Content/site/core/src/_page-header.scss
@@ -8,7 +8,7 @@
 		line-height: $page-header-height; // - (.1 / 100);
 
 		h1 {
-			float: left;
+			//float: left;
 			margin: 0 .5em;
 			font-size: 2em;            
 			font-weight: normal;
